[package]
name = "http_cache_server"
version = "0.1.0"
edition = "2021"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "hls_streaming"
path = "examples/hls_streaming.rs"

[[example]]
name = "bandwidth_control"
path = "examples/bandwidth_control.rs"

[[example]]
name = "security"
path = "examples/security.rs"

[[example]]
name = "storage_test"
path = "examples/storage_test.rs"

[dependencies]
tokio = { version = "1.28", features = ["full", "signal", "macros"] }
async-trait = "0.1.83"
futures = "0.3"
thiserror = "1.0"
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "5.4"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
hyper = { version = "0.14", features = ["full", "http1", "http2", "client"] }
bytes = "1.4"
url = "2.4"
sha2 = "0.10"
m3u8-rs = "5.0"
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.4", features = ["trace", "cors"] }
http = "0.2"
pin-project = "1.0"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
tempfile = "3.2"
# ... 其他依赖 