[package]
name = "http_cache_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
async-trait = "0.1"
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper = { version = "0.14", features = ["full"] }
bytes = "1.4"
m3u8-rs = "5.0"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }

[[example]]
name = "hls_proxy"
path = "examples/hls_proxy.rs"

[[example]]
name = "mp4_proxy"
path = "examples/mp4_proxy.rs"

[[example]]
name = "proxy_server"
path = "examples/proxy_server.rs"